Done with map + subjects written and practical exam